Fix small code smells